forever/www/order/css/items.css
/* ... */
.cart-item .product-info{
    border-right: 1px solid #cccccc6e;
    margin-right: 10px;
}

.cart-item .cart-control{
    width: 40%;
}

.share-options {
    display: none;
    position: absolute;
    top: 50px;
    left: 0;
    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: 5px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
    padding: 10px;
}

.share-options a {
    display: flex;
    align-items: center;
    margin: 5px 0;
    text-decoration: none;
    padding: 10px;
    border-radius: 5px;
    color: #fff;
    font-size: 14px;
}
/* .label{
    font-weight: 600 !important;
} */

.share-options img {
    width: 20px;
    height: 20px;
    margin-right: 10px;
}

.whatsapp-btn {
    background-color: #25D366;
    width: 100%;
    border-radius: 8px;
}

.facebook-btn {
    background-color: #1877f2;
}

.x-btn {
    background-color: #000;
}

.share-btn:focus+.share-options,
.share-btn:active+.share-options {
    display: block;
}

.button-container{
    display: flex;
    justify-content: center;
    gap: 10px;
}

.summery{
    text-align: right;
    font-size: 14px;
    color: #000;
    font-weight: 400;
    display: flex;
    justify-content: space-between;
    padding: 19px 0px;
    }
.cart-summery{
    display: flex;
    flex-direction: column;
    gap: 7px;
    width:50%;
}
.cart-summery .amt{
    border-bottom: 1px solid #0000005c;
    margin-bottom: 5px;
    padding-bottom: 5px;
}

.two-button .proceed-btnn {
background-color: #4f4f4f;
color: white;
font-weight: bold;
border: none;
width: 100%;
padding: 11px;
border-radius: 5px;
cursor: pointer;
text-align: center;
margin: 5px 0;
font-size: 14px;
}
.grand-total{
text-align: right;
font-size: 14px;
color: #000;
font-weight: 400;
margin-top: -15px;
padding-bottom:15px;

}

@media(max-width:650px) {
    .login-wrap {
        min-height: 100vh;
        margin-top: 0vh;
    }

    .cart-control{
        width: 170px;
    }

    .tabs-container {
        overflow-x: auto;
        white-space: nowrap;
        border-bottom: 0px solid #ccc;
        margin-bottom: 5px;
    }

    .tabs-container::-webkit-scrollbar {
        height: 0px;
    }
    .button-container {
    display: flex;
    justify-content: revert;
    gap: 10px;
    flex-direction: column;
    }
    .product-info h4 {
        margin: 0;
        font-size: 12px;
        font-weight: 500;
        color: #000;
        line-height: 16px;
    }
    .product-info .price {
        color: #000;
        font-weight: 500;
        font-size: 12px;
        line-height: 16px;
    }
   .total-amt {
        display: -webkit-flex;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        -webkit-justify-content: space-between;
        font-size: 13px;
        padding-top: 5px;
        color: #000;
        padding-right: 0px;
    }
    .cart-item .cart-control {
        width: 50%;
    }
    .cart {
        display: flex;
        flex-direction: column;
        gap: 4px;
        text-align: right;
        font-size: 12px;
        color: #000;
        font-weight: 400;
        padding-right: 10px;
    }
    .quantity-input {
        margin: 0 0px;
    }
    .home-logo{
        padding-bottom:90px;
    }

    /*.product-card {*/
    /*    display: flex;*/
    /*    flex-direction: column;*/
    /*    gap: 10px;*/
    /*    justify-content: center;*/
    /*    padding: 10px;*/
    /*}*/
    /*.product-info {*/
    /*    width: 100%;*/
    /*    text-align: center;*/
    /*}*/
    /*.total-amt {*/
    /*    justify-content: space-around;*/
    /*    -webkit-justify-content: space-around;*/
    /*    padding-right: 0px;*/
    /*}*/
    /*.product-image {*/
    /*    margin-right: 0px;*/
    /*}*/
    /*.quantity-control {*/
    /*    text-align: center;*/
    /*}*/
    /*.cart-item .product-info {*/
    /*    border-bottom: 1px solid #cccccc6e;*/
    /*    border-right: 0px solid #cccccc6e;*/
    /*    margin-right: 5px;*/
    /*    padding-bottom: 10px;*/
    /*}*/
    /*.cart-item .cart-control {*/
    /*    width: 100%;*/
    /*}*/
    /*.cart {*/
    /*    display: flex;*/
    /*    flex-direction: row;*/
    /*    justify-content: space-around;*/
    /*    gap: 4px;*/
    /*    text-align: right;*/
    /*    font-size: 13px;*/
    /*    color: #000;*/
    /*    font-weight: 600;*/
    /*    padding-right: 0px;*/
    /*}*/
    .navbar {

        display: none;
    }
    .web-footer {
    
        display: none;
    }
}

